5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1644_2447.log
== TEST (2019-06-04 16:35:00) 
-- CODE:
for i in range(100,5):
	prin(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:35:54) 
-- CODE:
for i in range(100,5):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:25:10) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx>yy):
	print("Falta"+ str(round(xx-yy,2)))
if(yy>=xx):
	print('Troco de ' + str(round(yy-xx,2)))

			
		
			 
-- EXECUTION TIME:
0.733267
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 4
    if(xx>yy):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:25:33) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx>yy):
	print("Falta"+ str(round(xx-yy,2)))
if(yy>=xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- EXECUTION TIME:
0.766656
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 4
    if(xx>yy):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:25:46) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx>yy):
	print("Falta "+ str(round(xx-yy,2)))
if(yy>=xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- EXECUTION TIME:
0.795845
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 4
    if(xx>yy):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:26:19) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx > yy):
	print("Falta "+ str(round(xx-yy,2)))
if(yy >= xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- EXECUTION TIME:
0.793856
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 4
    if(xx > yy):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:26:37) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx > yy):
	print("Falta "+ str(round(xx-yy,2)))
if(yy >= xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- ERROR:
File "XXXX", line 4
    if(xx > yy):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:27:31) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx > yy):
	print("Falta "+ str(round(xx-yy,2)))
if(yy >= xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- ERROR:
File "XXXX", line 4
    if(xx > yy):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:27:38) 
-- CODE:
xx = float(input("Digite a: ")) 
yy = float(input("Digite : ") 

if(xx > yy):
	print("Falta "+ str(round(xx-yy,2)))
if(yy >= xx):
	print("Troco de " + str(round(yy-xx,2)))

			
		
			 
-- ERROR:
File "XXXX", line 4
    if(xx > yy):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:28:05) 
-- CODE:
x = float(input("Digite a: ")) 
y = float(input("Digite : ") 

if(x > y):
	print("Falta "+ str(round(x-y,2)))
if(y >= x):
	print("Troco de " + str(round(y-x,2)))

			
		
			 
-- ERROR:
File "XXXX", line 4
    if(x > y):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:28:28) 
-- CODE:
x = float(input("Digite a: ")) 
y = float(input("Digite : ") 

if x > y:
	print("Falta "+ str(round(x-y,2)))
if y >= x:
	print("Troco de " + str(round(y-x,2)))

			
		
			 
-- ERROR:
File "XXXX", line 4
    if x > y:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:28:46) 
-- CODE:
x = float(input("Digite a: ")) 
y = float(input("Digite : ")) 

if x > y:
	print("Falta "+ str(round(x-y,2)))
if y >= x:
	print("Troco de " + str(round(y-x,2)))

			
		
			 
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:28:54) 
-- CODE:
x = float(input("Digite a: ")) 
y = float(input("Digite : ")) 

if x > y:
	print("Falta "+ str(round(x-y,2)))
if y >= x:
	print("Troco de " + str(round(y-x,2)))

			
		
			 
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:28:57) 
-- CODE:
x = float(input("Digite a: ")) 
y = float(input("Digite : ")) 

if x > y:
	print("Falta "+ str(round(x-y,2)))
if y >= x:
	print("Troco de " + str(round(y-x,2)))

			
		
			 
-- EXECUTION TIME:
0.784555
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
